fix: small issue with customizer double scrollbar

--- a/inc/customizer/controls/css/_generic.css
+++ b/inc/customizer/controls/css/_generic.css
@@ -1,3 +1,7 @@
+#customize-theme-controls .customize-pane-child.accordion-section-content {
+	overflow-y: hidden;
+}
+
 .control-wrap {
 	width: 100%;
 }
